# drainage

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py
.github/workflows/: ci.yml  publish.yml
examples/: analyze_any_table.py  analyze_delta_table.py  analyze_iceberg_table.py  monitor_multiple_tables.py  simple_analysis.py
src/: delta_lake.rs  health_analyzer.rs  health_analyzer_tests.rs  iceberg.rs  lib.rs  s3_client.rs  s3_client_tests.rs  storage_client.rs  storage_client_tests.rs  types.rs  types_tests.rs
tests/: README.md  __init__.py  conftest.py  test_drainage.py
