[package]
name = "drainage"
version = "0.1.7"
edition = "2021"

[lib]
name = "drainage"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
tokio = { version = "1.0", features = ["full"] }
aws-sdk-s3 = "0.28"
aws-config = "0.55"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockito = "0.32"
tempfile = "3.8"
pyo3 = { version = "0.20", features = ["extension-module", "auto-initialize"] }
